--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Log-in_Register.css
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Log-in_Register.css
@@ -12,7 +12,6 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-   /* background: linear-gradient( #010103/*-40deg,#e2e2e2,#c9d6ff,#d1c4ff,#e2e2e2);*/
     background: #161618;
     background-size: 400% 400%;
     animation: gradientBG 15s ease infinite;
@@ -70,7 +69,8 @@ form{
     margin: 30px 0;
 }
 
-.input-box input{
+.input-box input,
+.input-box select{
     width: 100%;
     padding: 13px 50px 13px 20px;
     background: #eee;
@@ -78,8 +78,30 @@ form{
     border: none;
     outline: none;
     font-size: 16px;
-    color: #413939;
+    color: #888;      
     font-weight: 500;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+/* Styling for the select dropdown */
+.input-box select.role-select{
+    cursor: pointer;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%23888' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 20px center;
+    padding-right: 50px;
+}
+
+/* Style for placeholder option */
+.input-box select option[value=""][disabled] {
+    color: #888;
+}
+
+/* Style for selected option */
+.input-box select:valid {
+    color: #413939;
 }
 
 .input-box input::placeholder{
@@ -87,7 +109,8 @@ form{
     font-weight: 400;
 }
 
-.input-box input:focus{
+.input-box input:focus,
+.input-box select:focus{
     outline: 2px solid #7494ec;
     box-shadow: 0 0 5px rgba(116,148,236,0.5);
     transition: 1s;
@@ -96,10 +119,12 @@ form{
 .input-box i{
     color: #888;
     position: absolute;
-    right: 20px;
+    right: 30px;
     top: 50%;
     transform: translateY(-50%);
     font-size: 20px;
+    pointer-events: none;
+    z-index: 1;
 }
 
 .forgot-link{
@@ -187,7 +212,7 @@ form{
     height: 100%;
     background: #d3ad7f;
     z-index: 2;
-    transition: 1.6s ease-in-out;   /* TRY VARIOUS SECONDS */
+    transition: 1.6s ease-in-out;
 }
 
 .container.active .toggle-box::before{
@@ -210,7 +235,7 @@ form{
 
 .toggle-panel.toggle-left{
     left: 0;
-    transition-delay: 1.2s;      /* TRY VARIOUS SECONDS */
+    transition-delay: 1.2s;
 }
 
 .container.active .toggle-panel.toggle-left{
@@ -288,45 +313,6 @@ form{
     }
     .container.active .toggle-panel.toggle-right{
         bottom: 0;
-    }
-}
-
-@media screen and (max-width: 650px){
-    .form-box{
-        padding: 20px;
-    }
-    .toggle-panel h1{
-        font-size: 30px;
-    }
-    .toggle-box::before{
-        left: 0;
-        top: -270%;
-        width: 100%;
-        height: 300%;
-        border-radius: 20vw;
-    }
-    .container.active .toggle-box::before{
-        left: 0;
-        top: 70%;
-    }
-    .toggle-panel{
-        width: 100%;
-        height: 30%;
-    }
-    .toggle-panel.toggle-left{
-        top: 0;
-    }
-    .container.active .toggle-panel.toggle-left{
-        left: 0;
-        top: -30%;
-    }
-    .toggle-panel.toggle-right{
-        right: 0;
-        top: -30%;
-    }
-    .container.active .toggle-panel.toggle-right{
-        bottom: -30%;
-        right: 0;
     }
 }
 
