--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Dashboard.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Dashboard.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,14 +7,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>DASHBOARD</title>
+  <title>{% block title %} DASHBOARD {% endblock %}</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="Dashboard.css">
+  <link rel="stylesheet" href="{% static 'Dashboard.css' %}">
 
   <!-- ApexCharts -->
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
@@ -85,7 +86,7 @@
     </div>
   </div>
 
-<script src="Dashboard.js"></script>
+<script src="{% static 'Dashboard.js' %}"></script>
   
 </body>
 </html>
