--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Log-in_Register.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Log-in_Register.html
@@ -8,7 +8,7 @@
     {% csrf_token %}
     <meta name="csrf-token" content="{{ csrf_token }}">
 
-    <title>LOG IN/REGISTER</title>
+    <title>{% block title %} LOG IN/REGISTER {% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'Log-in_Register.css' %}">
     <link href='https://cdn.boxicons.com/3.0.3/fonts/basic/boxicons.min.css' rel='stylesheet'>
@@ -146,5 +146,6 @@
     
     <script src="{% static 'Log-in_Register.js' %}" defer></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+
 </body>
 </html>
