--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/InventoryItemsTest.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/InventoryItemsTest.html
@@ -1,4 +1,10 @@
 {% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+  <base target="_top">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   {% csrf_token %}
   <meta name="csrf-token" content="{{ csrf_token }}">
@@ -14,8 +20,6 @@
   <!-- Select2 -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
   
-  <!--link rel="stylesheet" href="{% static 'Inventory-items.css' %}"-->
-
   <style>
     :root {
       --primary: #1abc9c;
@@ -404,7 +408,8 @@
       font-family: 'Montserrat', sans-serif;
     }
   </style>
-
+</head>
+<body>
     <div class="inventory-container">
     <!-- Header Section -->
     <div class="header-section">
@@ -1365,3 +1370,4 @@
     }
   </script>
 </body>
+</html>
