PROPER FILING AND CLEARING OF THE STATIC FILES FOR THE INVENTORY AND SUPPLIER MODULES.

--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Inventory-items.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Inventory-items.html
@@ -589,6 +589,7 @@
   <!-- jQuery and Select2 MUST be loaded first -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+  <!--script src="{% static 'Inventory-items.js' %}"></!--script-->
   
   <!-- Main JavaScript - INLINE to ensure it loads -->
   <script>
