--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Suppliers.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Suppliers.html
@@ -19,7 +19,7 @@
   <!-- Select2 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css">
   
-  <link rel="stylesheet" href="{% static 'Suppliers.css' %}">
+  <!--link rel="stylesheet" href="{% static 'Suppliers.css' %}"-->
 
   <style>
     .supplier-container {
