--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Suppliers.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Suppliers.html
@@ -403,7 +403,7 @@ h3{
           <th width="7%">Town</th>
           <th width="7%">Total Purchases</th>
           <th width="7%">Total Payments</th>
-          <th width="7%">Balance ayable</th>
+          <th width="7%">Balance Payable</th>
           <th width="7%">Actions</th>
         </tr>
       </thead>
